--- a/test.html
+++ b/test.html
@@ -5,7 +5,8 @@
     <meta charset='utf-8'>
     <title>Rickety Bridge</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <script src='rickety_bridge.js'></script>
+    <!-- <script src='/rickety_bridge/'></script> -->
+    <script src='./addition_no_plus/add.js'></script>
   </head>
 <body>
   <div>Check console :)</div>
